--- a/android/TKMS/app/src/main/res/layout/activity_description.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_description.xml
@@ -57,10 +57,12 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="match_parent"
-            android:layout_height="67dp"
+            android:layout_width="66dp"
+            android:layout_height="80dp"
             android:layout_alignParentRight="true"
-            app:srcCompat="@mipmap/share" />
+            app:srcCompat="@mipmap/share"
+            android:layout_marginRight="10dp"/>
+
 
     </RelativeLayout>
 
