--- a/android/TKMS/app/src/main/res/layout/halfview.xml
+++ b/android/TKMS/app/src/main/res/layout/halfview.xml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:weightSum="1"
-    >
+    android:layout_margin="20dp"
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <ImageView
         android:id="@+id/halfview_image"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="match_parent"
-        android:adjustViewBounds="true"
-        android:src="@android:drawable/alert_dark_frame"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="10dp"
-        />
+        android:adjustViewBounds="true"
+        android:src="@android:drawable/alert_dark_frame" />
 
     <TextView
         android:id="@+id/map_title_text"
         android:layout_width="wrap_content"
-        android:textAlignment="center"
-        android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:text="TEXT"
+        android:textAlignment="center"
         android:textColor="@android:color/white"
-        android:textSize="20sp" />
+        android:textSize="16sp" />
 
 </LinearLayout>
