--- a/android/TKMS/app/src/main/res/layout/map_selector_layout.xml
+++ b/android/TKMS/app/src/main/res/layout/map_selector_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dark_grey"
+    android:background="#444444"
     android:paddingTop="40dp">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -39,7 +39,6 @@
 </LinearLayout>
 
     <LinearLayout
-        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
