--- a/android/TKMS/app/src/main/res/layout/activity_description.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_description.xml
@@ -5,12 +5,16 @@
     android:scrollbarStyle="insideOverlay"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_margin="10dp"
     >
+    <LinearLayout android:id="@+id/whole_content_view"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="167dp"
@@ -50,6 +54,7 @@
         android:textSize="16dp"
         android:layout_height="wrap_content"
         />
+    </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -60,6 +65,7 @@
             android:layout_width="66dp"
             android:layout_height="80dp"
             android:layout_alignParentRight="true"
+            android:onClick="onShareButtonClick"
             app:srcCompat="@mipmap/share"
             android:layout_marginRight="10dp"/>
 
