--- a/android/TKMS/app/src/main/res/layout/marker_inactive.xml
+++ b/android/TKMS/app/src/main/res/layout/marker_inactive.xml
@@ -23,20 +23,20 @@
 
         <ImageView
             android:id="@+id/marker_image"
+            android:layout_width="43dp"
+            android:layout_height="50dp"
+            android:orientation="vertical"
+            ></ImageView>
+        <!--android:src="@drawable/pin_active_no_left"-->
+        <TextView
+            android:id="@+id/marker_text"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:orientation="vertical">
-        </ImageView>
-            <TextView
-                android:id="@+id/marker_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:padding="8dp"
-                android:text="dgdfgdfg"
-                android:textColor="@android:color/black"
-                android:textStyle="bold" />
+            android:layout_height="41dp"
+            android:gravity="center_vertical"
+            android:padding="5dp"
+            android:text="dgdfgdfg"
+            android:textColor="@android:color/black"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
