--- a/android/TKMS/app/src/main/res/layout/activity_history.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_history.xml
@@ -6,7 +6,8 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_margin="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,7 +23,9 @@
                 android:background="@mipmap/mymap_icon03"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
-                android:layout_margin="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginRight="10dp"
                 ProgressWheel:pwText="12"
                 ProgressWheel:pwTextSize="14sp"
                 ProgressWheel:pwRimColor="@android:color/white"
@@ -41,34 +44,28 @@
             android:layout_centerVertical="true"
             />
         </RelativeLayout>
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            android:layout_alignParentRight="true"
-            android:layout_margin="10dp"
-            android:src="@mipmap/human_turn_left_icon"
-            android:layout_alignParentEnd="true" />
 
         <TextView
 
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10sp"
-            android:textStyle="bold"
             android:text="@string/recent"
-            android:textSize="20sp"
+            android:textSize="18sp"
+            android:paddingBottom="5dp"
             />
+
+        <ImageView
+            android:layout_width="108dp"
+            android:layout_height="90dp"
+            android:layout_alignParentRight="true"
+            android:adjustViewBounds="true"
+            android:src="@mipmap/share_archive" />
     </RelativeLayout>
-
-
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/history_list_view"
         android:layout_width="match_parent"
-        android:layout_marginLeft="20sp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20sp" />
+        android:layout_height="wrap_content" />
 </LinearLayout>
 </ScrollView>
