--- a/android/TKMS/app/src/main/res/layout/history_view.xml
+++ b/android/TKMS/app/src/main/res/layout/history_view.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="60dp"
     card_view:cardCornerRadius="4dp"
     android:layout_margin="5dp"
     >
@@ -12,42 +12,45 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <ImageView
 
-            android:src="@drawable/pink_heart"
             android:id="@+id/history_view_pic"
+            android:layout_width="60dp"
 
-            android:scaleType="fitCenter"
-            android:layout_width="wrap_content"
-            android:adjustViewBounds="true"
             android:layout_height="match_parent"
-            />
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/place_name_text"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:textStyle="bold"
-        android:layout_margin="5dp"
-        android:text="PLACE NAME"
-        android:textSize="16sp" />
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:src="@drawable/pink_heart"
+            android:background="#333333"/>
 
-        <TextView
-            android:id="@+id/time_visit"
-            android:layout_below="@id/place_name_text"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="description description else else elseelse"
-            android:textSize="14sp" />
+            android:layout_marginTop="7dp"
+            android:layout_marginBottom="7dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp">
+
+            <TextView
+                android:id="@+id/place_name_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="PLACE NAME"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/time_visit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/place_name_text"
+                android:text="description description else else elseelse"
+                android:textSize="14sp"
+                android:textColor="#aaa"/>
 
 
-</RelativeLayout>
+        </RelativeLayout>
 
 
     </LinearLayout>
