--- a/android/TKMS/app/src/main/res/layout/activity_history.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_history.xml
@@ -53,6 +53,7 @@
             android:text="@string/recent"
             android:textSize="18sp"
             android:paddingBottom="5dp"
+            android:layout_marginTop="70dp"
             />
 
         <ImageView
