--- a/android/TKMS/app/src/main/res/layout/activity_edit_map.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_edit_map.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+<LinearLayout
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="20dp"
+    >
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -54,4 +60,15 @@
         android:layout_height="wrap_content"
         />
 
+    <ImageView
+        android:id="@+id/submit_button"
+        android:layout_marginTop="30dp"
+        android:layout_gravity="right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/the_app_icon"
+        android:onClick="onSubmitButtonClick"
+        />
+
 </LinearLayout>
+</ScrollView>
