--- a/android/TKMS/app/src/main/res/layout/activity_description_itemlist.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_description_itemlist.xml
@@ -8,102 +8,15 @@
     android:layout_margin="10dp"
     >
 
-    <LinearLayout
-        android:id="@+id/place_details_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/rounded_border"
-        android:paddingBottom="10dp"
-        >
+
 
         <!--ProgressWheel:pwText="Progress"-->
         <!--ProgressWheel:pwTextColor="#222"-->
         <!--ProgressWheel:pwTextSize="14sp"-->
 
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="167dp">
+       <include layout="@layout/place_info_view"/>
 
-            <ImageView
-                android:id="@+id/place_image"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:scaleType="fitCenter" />
-
-            <TextView
-                android:id="@+id/place_name_overlay"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:background="#aa333333"
-                android:padding="10dp"
-                android:textStyle="bold"
-                android:text="TEST"
-                android:textColor="@android:color/white"
-                android:textSize="20sp" />
-
-            <ImageView
-                android:id="@+id/heart_item_page"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:onClick="onHeartClick"
-                android:src="@drawable/grey_heart"
-                android:visibility="gone" />
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/place_address"
-            android:textSize="14sp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Address line"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="OnMoreDetailsClick"
-            android:orientation="horizontal"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            >
-            <TextView
-                android:textSize="14sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:textColor="@android:color/holo_blue_light"
-                android:text="@string/more_details_word"
-                />
-
-            <ImageView
-                android:id="@+id/arrow"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/blue_right_arrow" />
-        </LinearLayout>
-
-        <TextView
-            android:textSize="14sp"
-            android:id="@+id/place_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="5dp"
-            android:visibility="gone"
-            />
-
-    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
