--- a/android/TKMS/app/src/main/res/layout/activity_edit_map.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_edit_map.xml
@@ -18,6 +18,7 @@
         android:layout_margin="20dp"
         android:layout_width="wrap_content"
         android:text="Map name"
+        android:layout_gravity="center"
         android:layout_height="wrap_content" />
         <EditText
             android:id="@+id/map_name_edittext"
