เพิ่ม map ได้แล้ว เดี๋ยวต้องดูเรื่องเพิ่มรูปประจำ map

--- a/android/TKMS/app/src/main/res/layout/activity_edit_map.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_edit_map.xml
@@ -25,7 +25,19 @@
             android:layout_width="match_parent"
             android:inputType="text"
             android:layout_height="match_parent" />
+
+
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/add_map_image_button"
+        android:layout_marginTop="20dp"
+        android:layout_width="100dp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:src="@mipmap/pink_heart_icon"
+        />
 
     <RelativeLayout
 
