--- a/android/TKMS/app/src/main/res/layout/activity_edit_map.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_edit_map.xml
@@ -36,7 +36,8 @@
         android:layout_gravity="center"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:src="@mipmap/pink_heart_icon"
+        android:src="@mipmap/mymap_icon01"
+        android:onClick="OnImageMapClick"
         />
 
     <RelativeLayout
