--- a/android/TKMS/app/src/main/res/layout/halfview.xml
+++ b/android/TKMS/app/src/main/res/layout/halfview.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/halfview_image"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="10dp"
         android:adjustViewBounds="true"
