--- a/android/TKMS/app/src/main/res/layout/activity_edit_map.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_edit_map.xml
@@ -61,6 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@mipmap/add_map"
+        android:onClick="onAddNewPlaceClick"
         android:layout_toRightOf="@+id/place_list_header"/>
 
     </RelativeLayout>
