add places to map done (not event yet)

--- a/android/TKMS/app/src/main/res/layout/activity_edit_place_in_map.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_edit_place_in_map.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_width="match_parent" >
 <LinearLayout
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="20dp"
-    android:layout_marginVertical="30dp"
+    android:paddingHorizontal="20dp"
+    android:paddingVertical="30dp"
     >
 
     <LinearLayout
@@ -37,9 +37,9 @@
 
     <fragment
         android:id="@+id/map_fragment_edit_place"
-        android:name="com.google.android.gms.maps.MapFragment"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         />
 
     <LinearLayout
@@ -92,6 +92,16 @@
         android:id="@+id/eventListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        />
+
+    <ImageView
+        android:id="@+id/edit_place_submit_button"
+        android:layout_marginTop="30dp"
+        android:layout_gravity="right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/the_app_icon"
+        android:onClick="OnEditPlaceSubmitButtonClick"
         />
 
 </LinearLayout>
