--- a/android/TKMS/app/src/main/res/layout/place_info_view.xml
+++ b/android/TKMS/app/src/main/res/layout/place_info_view.xml
@@ -41,6 +41,7 @@
         android:visibility="gone" />
 </RelativeLayout>
     <LinearLayout
+        android:id="@+id/read_more"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="OnMoreDetailsClick"
