--- a/android/TKMS/app/src/main/res/layout/activity_edit_place_in_map.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_edit_place_in_map.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
     android:layout_width="match_parent" >
 <LinearLayout
@@ -18,7 +19,7 @@
         >
         <TextView
             android:layout_width="wrap_content"
-            android:text="Place name"
+            android:text="@string/place_name_text"
             android:layout_height="wrap_content" />
         <EditText
             android:id="@+id/place_name_edittext"
@@ -51,7 +52,7 @@
         >
         <TextView
             android:layout_width="wrap_content"
-            android:text="Place description"
+            android:text="@string/place_description_title"
             android:layout_height="wrap_content" />
         <EditText
             android:id="@+id/place_description_edittext"
@@ -60,8 +61,9 @@
             android:maxLines="5"
             android:inputType="textMultiLine"
             android:scrollbars="vertical"
-            android:gravity="top|left"
-            android:layout_height="wrap_content" />
+            android:gravity="start"
+            android:layout_height="wrap_content"
+            tools:ignore="LabelFor" />
     </LinearLayout>
 
     <RelativeLayout
@@ -78,16 +80,23 @@
             />
 
         <ImageView
+            android:id="@+id/add_event_button"
+            android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@mipmap/add_map"
-            android:layout_toRightOf="@+id/event_list_header"/>
+            android:layout_toRightOf="@+id/event_list_header"
+            android:layout_toEndOf="@+id/event_list_header"
+            android:contentDescription="@string/add_event_button_des"
+            android:onClick="onAddEventButtonClick"
+             />
 
     </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:id="@+id/eventListView"
         android:layout_width="match_parent"
