--- a/android/TKMS/app/src/main/res/values-v21/styles.xml
+++ b/android/TKMS/app/src/main/res/values-v21/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
 
     <style name="AppTheme" parent="Theme.AppCompat.Light">
@@ -10,7 +10,7 @@
         <item name="android:textColorSecondary">@color/dark_grey</item>
         <item name="android:navigationBarColor">@color/dark_grey</item>
         <item name="android:actionBarStyle">@style/AppTheme.ActionBarStyle</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorPrimary</item>
     </style>
 
     <style name="AppTheme.ActionBar.TitleTextStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
@@ -20,4 +20,15 @@
     <style name="AppTheme.ActionBarStyle" parent="@android:style/Widget.Holo.Light.ActionBar">
         <item name="android:titleTextStyle">@color/dark_grey</item>
     </style>
+
+    <!--<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar" tools:ignore="DuplicateDefinition">-->
+        <!--&lt;!&ndash; Customize your theme here. &ndash;&gt;-->
+        <!--<item name="colorPrimary">@color/colorPrimary</item>-->
+        <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
+        <!--<item name="android:textColorPrimary">@color/dark_grey</item>-->
+        <!--<item name="android:textColorSecondary">@color/dark_grey</item>-->
+        <!--<item name="android:navigationBarColor">@color/dark_grey</item>-->
+        <!--<item name="colorAccent">@color/colorAccent</item>-->
+    <!--</style>-->
+
 </resources>
