โดยรวม ๆ ก็คือไอของพวกเพิ่มแมพเพิ่มสภานที่ หรือกด edit delete ก็ควรจะเวิร์คแล้วล่ะนะ

--- a/android/TKMS/app/src/main/res/layout/activity_edit_map.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_edit_map.xml
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:src="@mipmap/mymap_icon01"
-        android:onClick="OnImageMapClick"
+        android:onClick="onImageViewClick"
         />
 
     <RelativeLayout
