--- a/android/TKMS/app/src/main/res/layout/activity_edit_event.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_edit_event.xml
@@ -91,11 +91,11 @@
                 android:id="@+id/event_image"
                 android:layout_marginTop="10dp"
                 android:layout_gravity="center"
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:src="@mipmap/add_map"
-                android:onClick="onEventImageClick"
+                android:src="@mipmap/mymap_icon01"
+                android:onClick="onImageViewClick"
                 />
 
         </LinearLayout>
