--- a/android/TKMS/app/src/main/res/layout/activity_edit_place_in_map.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_edit_place_in_map.xml
@@ -8,6 +8,7 @@
     android:layout_height="wrap_content"
     android:paddingHorizontal="20dp"
     android:paddingVertical="30dp"
+    android:focusableInTouchMode="true"
     >
 
     <LinearLayout
