--- a/android/TKMS/app/src/main/res/layout/activity_edit_map.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_edit_map.xml
@@ -6,13 +6,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-<<<<<<< HEAD
-    android:layout_margin="20dp"
-=======
-    android:padding="20dp"
-    android:focusableInTouchMode="true"
->>>>>>> origin/android-app
-    >
+    android:layout_margin="20dp">
 
     <ImageView
         android:id="@+id/add_map_image_button"
@@ -46,15 +40,9 @@
         <EditText
             android:id="@+id/map_name_edittext"
             android:layout_width="match_parent"
-<<<<<<< HEAD
             android:layout_height="match_parent"
-            android:inputType="text"/>
-=======
             android:inputType="text"
-            android:layout_height="match_parent"
-            />
->>>>>>> origin/android-app
-
+            android:focusableInTouchMode="true"/>
 
 
     </LinearLayout>
