- แก้แผนที่ในหน้า edit place ให้ long press ได้ - เลือก place category ได้ - แผนที่ในหน้า edit place แสดงตำแหน่ง device by default

--- a/android/TKMS/app/src/main/res/layout/activity_edit_map.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_edit_map.xml
@@ -6,7 +6,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="20dp">
+    android:focusableInTouchMode="true"
+    android:padding="20dp">
 
     <ImageView
         android:id="@+id/add_map_image_button"
@@ -41,8 +42,7 @@
             android:id="@+id/map_name_edittext"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="text"
-            android:focusableInTouchMode="true"/>
+            android:inputType="text"/>
 
 
     </LinearLayout>
