--- a/android/TKMS/app/src/main/res/layout/activity_edit_place_in_map.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_edit_place_in_map.xml
@@ -6,7 +6,7 @@
 <LinearLayout
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="20dp"
+    android:padding="20dp"
     android:focusableInTouchMode="true"
     >
 
@@ -53,6 +53,12 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:textSize="15sp"/>
+        <Spinner
+            android:id="@+id/place_category_dropdown"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown"/>
         <ImageView
             android:id="@+id/add_map_image_button"
             android:layout_marginTop="10dp"
@@ -61,15 +67,9 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:src="@mipmap/mymap_icon01"
-            android:onClick="onImageViewClick"
-            android:visibility="gone"
-            />
-        <Spinner
-            android:id="@+id/place_category_dropdown"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:drawable/btn_dropdown"
-            android:spinnerMode="dropdown"/>
+            android:visibility="visible"
+            >
+        </ImageView>
 
     </LinearLayout>
 
@@ -86,7 +86,7 @@
         >
         <TextView
             android:layout_width="wrap_content"
-            android:text="Place Description"
+            android:text="@string/your_description_of_this_place"
             android:layout_height="wrap_content"
             android:textSize="15sp" />
         <EditText
@@ -111,7 +111,7 @@
         android:background="@drawable/rounded_border"
         >
     <fragment
-        android:text="Search for the place"
+        android:text="@string/search_for_the_place"
         android:id="@+id/place_autocomplete_fragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -126,44 +126,44 @@
         />
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_marginTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone">
-        <TextView
-            android:id="@+id/event_list_header"
-            android:layout_centerVertical="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Events in this place"
-            android:textSize="20sp"
-            />
+    <!--<RelativeLayout-->
+        <!--android:layout_marginTop="20dp"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:visibility="gone">-->
+        <!--<TextView-->
+            <!--android:id="@+id/event_list_header"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Events in this place"-->
+            <!--android:textSize="20sp"-->
+            <!--/>-->
 
-        <ImageView
-            android:id="@+id/add_event_button"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@mipmap/add_map"
-            android:layout_toRightOf="@+id/event_list_header"
-            android:layout_toEndOf="@+id/event_list_header"
-            android:contentDescription="@string/add_event_button_des"
-            android:onClick="onAddEventButtonClick"
-             />
+        <!--<ImageView-->
+            <!--android:id="@+id/add_event_button"-->
+            <!--android:layout_marginStart="10dp"-->
+            <!--android:layout_marginLeft="10dp"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@mipmap/add_map"-->
+            <!--android:layout_toRightOf="@+id/event_list_header"-->
+            <!--android:layout_toEndOf="@+id/event_list_header"-->
+            <!--android:contentDescription="@string/add_event_button_des"-->
+            <!--android:onClick="onAddEventButtonClick"-->
+             <!--/>-->
 
-    </RelativeLayout>
+    <!--</RelativeLayout>-->
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:id="@+id/eventListView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        />
+    <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:layout_marginLeft="20dp"-->
+        <!--android:layout_marginStart="20dp"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:id="@+id/eventListView"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:visibility="gone"-->
+        <!--/>-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -176,7 +176,7 @@
             android:id="@+id/submit_button"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Done !"
+            android:text="@string/done"
             android:background="@color/colorPrimary"
             android:onClick="onSubmitButtonClick"/>
     </LinearLayout>
