--- a/android/TKMS/app/src/main/res/layout/place_info_view.xml
+++ b/android/TKMS/app/src/main/res/layout/place_info_view.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/place_name_overlay"
