--- a/android/TKMS/app/src/main/res/layout/activity_place_description.xml
+++ b/android/TKMS/app/src/main/res/layout/activity_place_description.xml
@@ -15,7 +15,7 @@
         <!--ProgressWheel:pwTextSize="14sp"-->
 
 
-       <include layout="@layout/place_info_view"/>
+       <include layout="@layout/listview_place"/>
 
 
     <TextView
